# gameOfLife

./: CMakeLists.txt
include/: AlwaysNextTurn.hpp  CommandSource.hpp  Cylinder.hpp  GameOfLifeController.hpp  GameOfLifeModel.hpp  GameOfLifeView.hpp  Torus.hpp  UserCommands.hpp
src/: AlwaysNextTurn.cpp  Cylinder.cpp  GameOfLifeController.cpp  GameOfLifeModel.cpp  GameOfLifeView.cpp  Torus.cpp  UserCommands.cpp  main.cpp  plansza.txt
